<resources>
    <string name="app_name">Let\'s Eat</string>

    <!-- Main Activity Strings -->
    <string name="main_text">Options</string>
    <string name="action_button">Let\'s Eat!</string>
    <string name="view_map_button">View Map</string>
    <string name="view_list_button">View List</string>
    <string name="result_prompt">You should eat at:</string>
    <string name="details_button">Details</string>
    <string name="show_on_map_button">Show on Map</string>
    <string name="directions_button">Directions</string>

    <!-- List Activity Strings -->
    <string name="title_activity_list">Nearby Places</string>

    <!-- Options Activity Strings -->
    <string name="title_activity_options">Options</string>
    <string name="options_apply">Apply</string>
    <string name="options_reset">Reset</string>
    <string name="options_distance">Distance</string>
    <string-array name="options_distance_array">
        <item>0.5 Miles</item>
        <item>1 Mile</item>
        <item>2 Miles</item>
        <item>3 Miles</item>
        <item>4 Miles</item>
        <item>5 Miles</item>
        <item>10 Miles</item>
    </string-array>
    <string name="options_category">Category</string>
    <string-array name="options_category_array">
        <item>Any</item>
        <item>American</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Sandwich</item>
        <item>Sushi</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>
    <string name="options_rating">Rating</string>
    <string-array name="options_rating_array">
        <item>Any</item>
        <item>1 Star</item>
        <item>2 Stars</item>
        <item>3 Stars</item>
        <item>4 Stars</item>
        <item>5 Stars</item>
    </string-array>
    <string name="options_price">Price</string>
    <string-array name="options_price_array">
        <item>Any</item>
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
    <string name="options_open">Open Now</string>
    <string-array name="options_open_array">
        <item>Any</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- Settings Activity Strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_location">Set Location</string>
    <string name="settings_current_location">Current Location</string>
    <string name="settings_custom_location">Custom Location</string>
    <string name="settings_zipcode">Zip Code: </string>
    <string name="settings_apply">Apply</string>

    <!-- Details Activity Strings -->
    <string name="title_activity_details">Place Details</string>
    <string name="details_location">Location</string>
    <string name="details_rating">Rating</string>
    <string name="details_price">Price</string>

    <!-- About Activity Strings -->
    <string name="title_activity_about">About</string>
    <string name="about_dev">NiPsMo Labs</string>
    <string name="about_version">Version 1.1.11</string>
    <string name="about_released">Released: 5/25/2018</string>
    <string name="about_button">Send Feedback</string>
    <string name="about_github_link">https://github.com/NiPaMo/LetsEat</string>


    <!-- Maps Activity Strings -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detailed_map">Detailed Map</string>

    <!-- Menu Strings -->
    <string name="menu_overflow">More</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_options">Options</string>
</resources>
