<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/options"
        android:title="@string/menu_options"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always" >
    </item>

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="always" >
    </item>

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/menu_overflow"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/about"
                android:title="@string/menu_about"
                app:showAsAction="never" >
            </item>
        </menu>
    </item>
</menu>