<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.labs.nipamo.letseat.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_location"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_margin="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <RadioButton
        android:id="@+id/currentLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_current_location"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight=".5"
        android:onClick="setCurrent" />

    <RadioButton
        android:id="@+id/customLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_custom_location"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight=".5"
        android:onClick="setCustom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_zipcode"
            android:textSize="20sp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp"/>

        <EditText
            android:id="@+id/zipcodeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:visibility="invisible"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight=".25"/>
    </LinearLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/settings_apply"
        android:onClick="apply"
        android:textAllCaps="false"
        android:layout_margin="15dp"
        android:visibility="visible"
        android:layout_gravity="center"/>

</LinearLayout>
