<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.labs.nipamo.letseat.MainActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/view_map_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight=".5"
            android:onClick="viewMap"
            android:text="@string/view_map_button"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/view_list_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/view_list_button"
            android:onClick="viewList"
            android:layout_weight=".5"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/action_button"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:text="@string/action_button"
        android:onClick="letsEat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_margin="20dp"
            android:text="@string/result_prompt"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:visibility="invisible"
            android:textAlignment="center" />

        <Button
            android:id="@+id/details_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:text="@string/details_button"
            android:textAllCaps="false"
            android:visibility="invisible"
            android:onClick="showDetails" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
