<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.labs.nipamo.letseat.OptionsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat" />

    <!-- Main Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Distance Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/distance"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/options_distance"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_weight=".25"/>

            <Spinner
                android:id="@+id/distanceSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <!-- Category Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/category"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/options_category"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_weight=".25"/>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <!-- Rating Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/options_rating"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_weight=".25"/>

            <Spinner
                android:id="@+id/ratingSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <!-- Price Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/options_price"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_weight=".25"/>

            <Spinner
                android:id="@+id/priceSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <!-- Open Now Option -->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/open"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/options_open"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_weight=".25"/>

        <Spinner
            android:id="@+id/openSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight=".5"
                android:onClick="reset"
                android:text="@string/options_reset"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:text="@string/options_apply"
                android:onClick="apply"
                android:layout_weight=".5"
                android:textAllCaps="false" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
